--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,5 @@
 <footer class="footer py-3 mt-auto primary-color">
   <div class="container">
-    <span class="text-muted">&copy; YelpCamp 2024</span>
+    <span class="text-muted">&copy; 2024</span>
   </div>
 </footer>
