--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -21,8 +21,8 @@
         <% } %> <% if (typeof nationalPark !== 'undefined') { %>
         <a
           class="nav-link"
-          href="/nationalParks/<%= nationalPark._id %>/hikes/new"
-          >New Hike</a
+          href="/nationalParks/<%= nationalPark._id %>/sights/new"
+          >New Sight</a
         >
         <% } %>
       </div>
