add sight type and difficulty selectors and add sight location selector map

--- a/views/nationalParks/new.ejs
+++ b/views/nationalParks/new.ejs
@@ -27,7 +27,7 @@
           id="state"
           name="nationalPark[state]"
         >
-          <option selected>Select a state...</option>
+          <option selected value="">Select a state...</option>
           <% states.forEach((state, i) => { %>
           <option value="<%= state %>"><%= state %></option>
           <% }) %>
