--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -16,9 +16,8 @@
       <div class="navbar-nav">
         <a class="nav-link" href="/">Home</a>
         <a class="nav-link" href="/nationalParks">National Parks</a>
-        <% if (currentUser && currentUser.email == 'sajoh002@gmail.com') { %>
         <a class="nav-link" href="/nationalParks/new">New National Park</a>
-        <% } %> <% if (typeof nationalPark !== 'undefined') { %>
+        <% if (typeof nationalPark !== 'undefined') { %>
         <a
           class="nav-link"
           href="/nationalParks/<%= nationalPark._id %>/sights/new"
