update default thumbnail and sights schema

--- a/views/nationalParks/show.ejs
+++ b/views/nationalParks/show.ejs
@@ -30,7 +30,7 @@
       <img
         class="img-fluid"
         crossorigin="anonymous"
-        src="https://res.cloudinary.com/dy4jgwfkr/image/upload/v1711320871/YelpCamp/spkn4uiva5vczxkrb6ae.png"
+        src="'https://res.cloudinary.com/dy4jgwfkr/image/upload/v1712629068/YelpCamp/smnf906qmtnklhldvcpa.jpg"
         alt=""
       />
       <% } %>
