--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark sticky-top primary-color">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">YelpCamp</a>
+    <a class="navbar-brand" href="#">HikeNationalParks</a>
     <button
       class="navbar-toggler"
       type="button"
