--- a/views/nationalParks/edit.ejs
+++ b/views/nationalParks/edit.ejs
@@ -36,14 +36,8 @@
         <label for="state">State</label>
       </div>
       <div class="mb-3 input-group">
-        <label class="input-group-text" for="image">Add Image(s)</label>
-        <input
-          type="file"
-          name="image"
-          id="image"
-          class="form-control"
-          multiple
-        />
+        <label class="input-group-text" for="image">Add Image</label>
+        <input type="file" name="image" id="image" class="form-control" />
       </div>
       <div class="input-group mb-3">
         <span class="input-group-text">$</span>
