remove whitespace when editing np and sights

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -34,7 +34,8 @@
         <p class="lead">
           Welcome to HikeNationalParks! <br />
           Jump right in and explore our many National Parks and hikes. <br />
-          Feel free to share some of your own hikes and comment on others!
+          Feel free to share some of your own hikes or other sights and comment
+          on others!
         </p>
         <a class="btn btn-large text-white fw-bold" href="/nationalParks"
           >View National Parks</a
