--- a/views/nationalParks/edit.ejs
+++ b/views/nationalParks/edit.ejs
@@ -73,7 +73,7 @@
           style="height: 100px"
           required
         >
-          <%= nationalPark.description %>
+<%= nationalPark.description.trim() %>
         </textarea>
         <label class="form-label" for="description">Description</label>
       </div>
