--- a/views/sights/edit.ejs
+++ b/views/sights/edit.ejs
@@ -97,7 +97,7 @@
             style="height: 100px"
             required
           >
-          <%= sight.description %></textarea
+<%= sight.description.trim() %></textarea
           >
           <label class="form-label" for="description">Description</label>
         </div>
