--- a/views/home.ejs
+++ b/views/home.ejs
@@ -42,7 +42,7 @@
         >
       </main>
       <footer class="mt-auto text-white-50">
-        <p>&copy; 2024 YelpCamp</p>
+        <p>&copy; 2024</p>
       </footer>
     </div>
     <script
