--- a/views/sights/show.ejs
+++ b/views/sights/show.ejs
@@ -80,11 +80,13 @@
         Submitted by <%= sight.author.username %>
       </div>
     </div>
-    <a
-      href="/nationalParks/<%= sight.nationalPark._id %>"
-      class="btn btn-outline-primary"
-      >Back to <%= nationalPark.title %></a
-    >
+    <div class="mb-3">
+      <a
+        href="/nationalParks/<%= sight.nationalPark._id %>"
+        class="btn btn-outline-primary"
+        >Back to <%= nationalPark.title %></a
+      >
+    </div>
   </div>
   <div class="col-6">
     <div id="map"></div>
